comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, ex, odit voluptatem minus unde aut recusandae ducimus corrupti libero quam, amet harum a provident mollitia nulla vero ratione nisi quod.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, reprehenderit asperiores. Vel eligendi ab ipsam dignissimos facere veniam cum adipisci neque dolore cumque voluptatum sit quod blanditiis delectus, aspernatur fugiat.</p>
         </article>
     </main>
 </body>
